⚡ UI 업데이트: 연구성과 필터링 오류 수정 및 영문 페이지 레이아웃(Padding) 개선

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - MasVisio Research</title>
-    <meta name="description" content="Browse the research gallery of MasVisio Research showcasing our vision science innovations and breakthroughs.">
+    <meta name="description"
+        content="Browse the research gallery of MasVisio Research showcasing our vision science innovations and breakthroughs.">
     <meta property="og:title" content="Gallery - MasVisio Research">
-    <meta property="og:description" content="Browse the research gallery of MasVisio Research showcasing our vision science innovations and breakthroughs.">
+    <meta property="og:description"
+        content="Browse the research gallery of MasVisio Research showcasing our vision science innovations and breakthroughs.">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -55,18 +57,16 @@
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Gallery</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">Explore our research activities and events.</p>
-                </header>
+        <div class="container">
+            <header style="margin-bottom: 4rem; border-bottom: none;">
+                <h2 style="font-size: 3rem; margin-bottom: 1rem;">Gallery</h2>
+                <p style="font-size: 1.2rem; color: #64748b;">Explore our research activities and events.</p>
+            </header>
 
-                <div id="gallery-container">
-                    <p>Coming Soon...</p>
-                </div>
+            <div id="gallery-container">
+                <p>Coming Soon...</p>
             </div>
-        </section>
+        </div>
     </main>
 
     <script src="../assets/js/main.js?v=1.4"></script>
