--- a/publications/index.html
+++ b/publications/index.html
@@ -67,23 +67,22 @@
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Publications</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">Our latest research findings and academic
-                        contributions.</p>
-                </header>
+        <div class="container">
+            <header style="margin-bottom: 4rem; border-bottom: none;">
+                <h2 style="font-size: 3rem; margin-bottom: 1rem;">Research Publications</h2>
+                <p style="font-size: 1.2rem; color: #64748b;">Our latest research findings and academic
+                    contributions.</p>
+            </header>
 
-                <div id="publications-container">
-                    <!-- Dynamic content will be loaded here -->
-                    <p>Loading publications...</p>
-                </div>
+            <div id="publications-container">
+                <!-- Dynamic content will be loaded here -->
+                <div class="loading-spinner"></div>
+                <p style="text-align:center; color:#64748b;">Loading publications...</p>
             </div>
-        </section>
+        </div>
     </main>
 
-    <script src="../assets/js/main.js?v=1.5"></script>
+    <script src="../assets/js/main.js?v=1.6"></script>
 </body>
 
 </html>
