⚡ UI 업데이트: 영문 페이지 레이아웃 구조 복원 및 사이드바 서브메뉴 하이라이팅 기능 추가

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -57,16 +57,18 @@
     </aside>
 
     <main class="main-content">
-        <div class="container">
-            <header style="margin-bottom: 4rem; border-bottom: none;">
-                <h2 style="font-size: 3rem; margin-bottom: 1rem;">Gallery</h2>
-                <p style="font-size: 1.2rem; color: #64748b;">Explore our research activities and events.</p>
-            </header>
+        <section class="section" style="padding: 4rem 4rem;">
+            <div class="container">
+                <header style="margin-bottom: 4rem; border-bottom: none;">
+                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Gallery</h2>
+                    <p style="font-size: 1.2rem; color: #64748b;">Explore our research activities and events.</p>
+                </header>
 
-            <div id="gallery-container">
-                <p>Coming Soon...</p>
+                <div id="gallery-container">
+                    <p>Coming Soon...</p>
+                </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <script src="../assets/js/main.js?v=1.4"></script>
