--- a/ko/publications/index.html
+++ b/ko/publications/index.html
@@ -43,12 +43,9 @@
             <a href="index.html" class="nav-item active">연구성과</a>
             <div class="sidebar-submenu"
                 style="padding-left: 1.5rem; display: flex; flex-direction: column; gap: 0.2rem; margin-bottom: 0.5rem;">
-                <a href="#reviewed-papers" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #003366; background-color: rgba(0, 51, 102, 0.03);">연구논문</a>
-                <a href="#conference" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">학술발표</a>
-                <a href="#patent" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">특허</a>
+                <a href="#reviewed-papers" class="nav-item submenu-link">연구논문</a>
+                <a href="#conference" class="nav-item submenu-link">학술발표</a>
+                <a href="#patent" class="nav-item submenu-link">특허</a>
             </div>
             <a href="../gallery/index.html" class="nav-item">갤러리</a>
             <a href="../partnership/index.html" class="nav-item">제공서비스</a>
