--- a/publications/index.html
+++ b/publications/index.html
@@ -44,13 +44,9 @@
             <a href="index.html" class="nav-item active">Publications</a>
             <div class="sidebar-submenu"
                 style="padding-left: 1.5rem; display: flex; flex-direction: column; gap: 0.2rem; margin-bottom: 0.5rem;">
-                <a href="#reviewed-papers" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #003366; background-color: rgba(0, 51, 102, 0.03);">Reviewed
-                    Papers</a>
-                <a href="#conference" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">Conference</a>
-                <a href="#patent" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">Patent</a>
+                <a href="#reviewed-papers" class="nav-item submenu-link">Reviewed Papers</a>
+                <a href="#conference" class="nav-item submenu-link">Conference</a>
+                <a href="#patent" class="nav-item submenu-link">Patent</a>
             </div>
             <a href="../gallery/index.html" class="nav-item">Gallery</a>
             <a href="../partnership/index.html" class="nav-item">Services</a>
@@ -67,19 +63,21 @@
     </aside>
 
     <main class="main-content">
-        <div class="container">
-            <header style="margin-bottom: 4rem; border-bottom: none;">
-                <h2 style="font-size: 3rem; margin-bottom: 1rem;">Research Publications</h2>
-                <p style="font-size: 1.2rem; color: #64748b;">Our latest research findings and academic
-                    contributions.</p>
-            </header>
+        <section class="section" style="padding: 4rem 4rem;">
+            <div class="container">
+                <header style="margin-bottom: 4rem; border-bottom: none;">
+                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Research Publications</h2>
+                    <p style="font-size: 1.2rem; color: #64748b;">Our latest research findings and academic
+                        contributions.</p>
+                </header>
 
-            <div id="publications-container">
-                <!-- Dynamic content will be loaded here -->
-                <div class="loading-spinner"></div>
-                <p style="text-align:center; color:#64748b;">Loading publications...</p>
+                <div id="publications-container">
+                    <!-- Dynamic content will be loaded here -->
+                    <div class="loading-spinner"></div>
+                    <p style="text-align:center; color:#64748b;">Loading publications...</p>
+                </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <script src="../assets/js/main.js?v=1.6"></script>
