--- a/ko/publications/index.html
+++ b/ko/publications/index.html
@@ -64,7 +64,7 @@
     <main class="main-content">
         <section class="section" style="padding: 4rem 4rem;">
             <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
+                <header id="page-header" style="margin-bottom: 4rem; border-bottom: none;">
                     <h2 style="font-size: 3rem; margin-bottom: 1rem;">연구 성과</h2>
                     <p style="font-size: 1.2rem; color: #64748b;">최신 연구 결과와 학술적 기여를 소개합니다.</p>
                 </header>
