--- a/publications/index.html
+++ b/publications/index.html
@@ -66,7 +66,7 @@
     <main class="main-content">
         <section class="section" style="padding: 4rem 4rem;">
             <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
+                <header id="page-header" style="margin-bottom: 4rem; border-bottom: none;">
                     <h2 style="font-size: 3rem; margin-bottom: 1rem;">Research Publications</h2>
                     <p style="font-size: 1.2rem; color: #64748b;">Our latest research findings and academic
                         contributions.</p>
