🛠️ 모바일 내비: 연구성과/홈 동작 개선

--- a/ko/index.html
+++ b/ko/index.html
@@ -17,6 +17,12 @@
 </head>
 
 <body class="sidebar-layout">
+    <header class="mobile-header">
+        <a href="index.html" class="mobile-logo">
+            <h1>MasVisio<br>Research</h1>
+            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
+        </a>
+    </header>
     <!-- Sidebar Navigation -->
     <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
         <div class="sidebar-header">
