--- a/research/overview.html
+++ b/research/overview.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research - MasVisio Research</title>
-    <meta name="description" content="Overview of MasVisio Research programs including 4D myopia control, AI diagnostics, and biometric measurement.">
+    <meta name="description"
+        content="Overview of MasVisio Research programs including 4D myopia control, AI diagnostics, and biometric measurement.">
     <meta property="og:title" content="Research Overview - MasVisio Research">
-    <meta property="og:description" content="Overview of MasVisio Research programs including 4D myopia control, AI diagnostics, and biometric measurement.">
+    <meta property="og:description"
+        content="Overview of MasVisio Research programs including 4D myopia control, AI diagnostics, and biometric measurement.">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/main.css?v=1.4">
@@ -65,21 +67,23 @@
 
                 <div class="challenges-list">
                     <!-- Challenge 1: Contrast Sensitivity -->
-                    <div class="challenge-item">
+                    <!-- Challenge 1: Contrast Sensitivity -->
+                    <div class="challenge-item" id="contrast-sensitivity">
                         <div class="challenge-text">
-                            <h3>Contrast Sensitivity</h3>
-                            <p>Developing advanced algorithms to measure and analyze contrast sensitivity functions
-                                (CSF) with higher precision. Our approach integrates psychophysical methods with machine
-                                learning to detect early visual impairments often missed by standard acuity tests.</p>
-                            <p><strong>Key Focus:</strong> Early detection of glaucoma and retinal diseases through
-                                high-frequency contrast thresholds.</p>
+                            <h3>Motion Contrast Sensitivity in Visual Pathways</h3>
+                            <p>Investigating the correlation between visual pathway dominance and motion contrast
+                                sensitivity. We analyze detection thresholds for stationary and moving stimuli in
+                                simulated hemianopsia conditions.</p>
+                            <p><strong>Key Focus:</strong> Validating visual pathway dominance through hemianopsia
+                                simulation and contrast sensitivity analysis.</p>
+                            <a href="project.html?id=contrast-sensitivity" class="btn-text"
+                                style="color: #003366; font-weight: 600; text-decoration: none; margin-top: 1rem; display: inline-block;">View
+                                Project Details &rarr;</a>
                         </div>
                         <div class="challenge-media">
-                            <!-- Placeholder for GIF/Image -->
-                            <div class="challenge-placeholder">
-                                <p>[GIF] Contrast Sensitivity Testing Process</p>
-                                <small>assets/images/challenges/contrast_sensitivity/</small>
-                            </div>
+                            <img src="../assets/images/contrast_sensitivity_plot.png" alt="Contrast Sensitivity Plot"
+                                style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); cursor: pointer;"
+                                onclick="window.location.href='project.html?id=contrast-sensitivity'">
                         </div>
                     </div>
 
@@ -163,8 +167,11 @@
 
                 <!-- AI Disease Diagnosis Section -->
                 <div style="margin-top: 4rem;">
-                    <h3 style="font-size: 1.8rem; color: #003366; margin-bottom: 2rem; padding-bottom: 0.5rem; border-bottom: 2px solid #003366;">AI Disease Prediction</h3>
-                    <p style="color: #64748b; margin-bottom: 2rem;">8-stage eye disease risk analysis system using AI visual intelligence.</p>
+                    <h3
+                        style="font-size: 1.8rem; color: #003366; margin-bottom: 2rem; padding-bottom: 0.5rem; border-bottom: 2px solid #003366;">
+                        AI Disease Prediction</h3>
+                    <p style="color: #64748b; margin-bottom: 2rem;">8-stage eye disease risk analysis system using AI
+                        visual intelligence.</p>
                     <div id="diagnostics-container">
                         <div class="loading">Loading data...</div>
                     </div>
