--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -63,104 +63,186 @@
                 </header>
 
                 <div class="challenges-list">
-                    <!-- 도전과제 1: 대비감도 -->
-                    <!-- 도전과제 1: 대비감도 -->
-                    <div class="challenge-item" id="contrast-sensitivity">
-                        <div class="challenge-text">
-                            <h3>좌우 시각경로의 모션 대비감도 연구</h3>
-                            <p>반맹 시뮬레이션을 통해 시각 경로 우세성과 운동 대비감도의 상관관계를 규명합니다. 정지 및 운동 자극에 대한 검출 역치를 분석하여 시각 정보 처리의 특성을
-                                연구합니다.</p>
-                            <p><strong>핵심 목표:</strong> 반맹 시뮬레이션과 대비감도 분석을 통한 시각 경로 우세성 검증</p>
-                            <a href="project.html?id=contrast-sensitivity" class="btn-text"
-                                style="color: #003366; font-weight: 600; text-decoration: none; margin-top: 1rem; display: inline-block;">프로젝트
-                                자세히 보기 &rarr;</a>
-                        </div>
-                        <div class="challenge-media">
-                            <img src="../../assets/images/contrast_sensitivity_plot.png" alt="Contrast Sensitivity Plot"
-                                style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); cursor: pointer;"
-                                onclick="window.location.href='project.html?id=contrast-sensitivity'">
-                        </div>
-                    </div>
+                    <div class="challenges-content">
 
-                    <!-- 도전과제 2: 각막-공막 프로파일링 -->
-                    <div class="challenge-item reverse">
-                        <div class="challenge-text">
-                            <h3>각막-공막 프로파일링 &<br>3D 재구성</h3>
-                            <p>전범위 전안부 프로파일링을 위한 새로운 시스템입니다. 각막과 공막의 3D 지형을
-                                재구성함으로써 공막 렌즈의 정밀한 피팅과 고급 근시 제어 개입이 가능합니다.</p>
-                            <p><strong>핵심 목표:</strong> 맞춤형 콘택트렌즈 설계를 위한 안구 표면의 3D 모델링</p>
-                        </div>
-                        <div class="challenge-media">
-                            <div class="challenge-placeholder">
-                                <p>[Image/GIF] 3D 각막-공막 모델</p>
-                                <small>assets/images/challenges/corneo_scleral/</small>
+                        <!-- Project 1: Contrast Sensitivity -->
+                        <div class="project-section"
+                            style="margin-bottom: 5rem; padding-bottom: 4rem; border-bottom: 1px solid #e2e8f0;">
+                            <h3 style="font-size: 1.8rem; color: #0f172a; margin-bottom: 0.5rem; word-break: keep-all;">
+                                좌우 시각경로의 모션 대비감도 연구</h3>
+                            <p class="subtitle" style="font-size: 1.2rem; color: #64748b; margin-bottom: 2rem;">반맹
+                                시뮬레이션을 통한 시각 경로 우세성 검증</p>
+
+                            <div class="project-body" style="display: flex; flex-direction: column; gap: 2rem;">
+                                <div class="project-text">
+                                    <h4
+                                        style="font-size: 1rem; font-weight: 700; color: #334155; margin-bottom: 0.5rem;">
+                                        연구 목표</h4>
+                                    <p
+                                        style="margin-bottom: 1.5rem; line-height: 1.7; color: #334155; word-break: keep-all;">
+                                        오른손잡이의 좌뇌 언어 우세성이 시각 경로의 대비민감도에도 반영되는지 검증하고, 중심오목 20도 편심 위치에서 저공간주파수(1 cpd) 자극에
+                                        대한 정지 및 운동 민감도를 분석합니다.</p>
+
+                                    <h4
+                                        style="font-size: 1rem; font-weight: 700; color: #334155; margin-bottom: 0.5rem;">
+                                        연구 방법</h4>
+                                    <ul
+                                        style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1.5rem; color: #475569; line-height: 1.6;">
+                                        <li><strong>대상:</strong> 정상 시력 성인 24명 (오른손잡이 21명, 왼손잡이 3명)</li>
+                                        <li><strong>장비:</strong> Morphonome 소프트웨어, 반맹 시뮬레이터</li>
+                                        <li><strong>조건:</strong> 좌반맹(LH) vs 우반맹(RH) 시뮬레이션</li>
+                                        <li><strong>자극:</strong> 1 cpd 가보 패치, 이동 속도 3수준 (0, 10, 30 cm/s)</li>
+                                    </ul>
+
+                                    <h4
+                                        style="font-size: 1rem; font-weight: 700; color: #334155; margin-bottom: 0.5rem;">
+                                        주요 결과</h4>
+                                    <ul
+                                        style="list-style-type: none; padding: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin-bottom: 1.5rem;">
+                                        <li style="background: #f8fafc; padding: 1rem; border-radius: 8px;">
+                                            <strong style="display: block; color: #003366; margin-bottom: 0.2rem;">속도에
+                                                따른 민감도 감소</strong>
+                                            <span style="font-size: 0.9rem; color: #64748b;">자극 속도가 빠를수록 대비민감도 유의하게 저하
+                                                (p<.001)< /span>
+                                        </li>
+                                        <li style="background: #f8fafc; padding: 1rem; border-radius: 8px;">
+                                            <strong style="display: block; color: #003366; margin-bottom: 0.2rem;">경로 간
+                                                차이 없음</strong>
+                                            <span style="font-size: 0.9rem; color: #64748b;">우반맹(RH) 조건에서 민감도가 다소 높은 경향,
+                                                통계적 유의성 없음 (p=.075)</span>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <div class="project-images" style="display: flex; gap: 1rem; flex-wrap: wrap;">
+                                    <figure style="margin: 0;">
+                                        <img src="../../assets/images/contrast_sensitivity_plot.png" alt="대비감도 그래프"
+                                            style="height: 250px; width: auto; max-width: 100%; border: 1px solid #e2e8f0; border-radius: 4px;">
+                                        <figcaption style="font-size: 0.85rem; color: #64748b; margin-top: 0.5rem;">민감도
+                                            변화 그래프</figcaption>
+                                    </figure>
+                                    <figure style="margin: 0;">
+                                        <img src="../../assets/images/contrast_sensitivity_boxplot.png" alt="대비감도 박스플롯"
+                                            style="height: 250px; width: auto; max-width: 100%; border: 1px solid #e2e8f0; border-radius: 4px;">
+                                        <figcaption style="font-size: 0.85rem; color: #64748b; margin-top: 0.5rem;">통계적
+                                            분포</figcaption>
+                                    </figure>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- 도전과제 3: 망막 프로파일링 -->
-                    <div class="challenge-item">
-                        <div class="challenge-text">
-                            <h3>망막 프로파일링 &<br>3D 재구성</h3>
-                            <p>OCT 및 안저 영상 데이터를 활용하여 포괄적인 3D 망막 지도를 생성합니다.
-                                이 기술은 근시 진행 및 황반변성 모니터링에 중요한 망막층 두께 변화를
-                                정밀하게 추적할 수 있게 합니다.</p>
-                            <p><strong>핵심 목표:</strong> 망막 곡률 및 주변부 초점 이탈의 정량적 분석</p>
-                        </div>
-                        <div class="challenge-media">
-                            <div class="challenge-placeholder">
-                                <p>[Image/GIF] 망막층 분석</p>
-                                <small>assets/images/challenges/retinal/</small>
+                        <!-- Project 2: Myopia Control -->
+                        <div class="project-section"
+                            style="margin-bottom: 5rem; padding-bottom: 4rem; border-bottom: 1px solid #e2e8f0;">
+                            <h3 style="font-size: 1.8rem; color: #0f172a; margin-bottom: 0.5rem; word-break: keep-all;">
+                                전체망막 완전교정과 근시억제</h3>
+                            <p class="subtitle" style="font-size: 1.2rem; color: #64748b; margin-bottom: 2rem;">혁신적인 근시
+                                제어 플랫폼</p>
+
+                            <div class="project-body">
+                                <h4 style="font-size: 1rem; font-weight: 700; color: #334155; margin-bottom: 0.5rem;">연구
+                                    목표</h4>
+                                <p
+                                    style="margin-bottom: 1.5rem; line-height: 1.7; color: #334155; word-break: keep-all;">
+                                    근시 진행의 핵심 메커니즘인 주변부 망막의 초점 위치와 안구 성장의 관계를 체계적으로 분석하여, 사광선의 FS' 초점선 위치 조절을 통한 근시 억제
+                                    메커니즘을 규명합니다.</p>
+
+                                <h4 style="font-size: 1rem; font-weight: 700; color: #334155; margin-bottom: 0.5rem;">핵심
+                                    메커니즘</h4>
+                                <ul
+                                    style="list-style-type: none; padding: 0; margin-bottom: 2rem; display: flex; flex-direction: column; gap: 1rem;">
+                                    <li style="padding-left: 1rem; border-left: 3px solid #003366;">
+                                        <strong style="color: #0f172a; display: block; margin-bottom: 0.3rem;">주변부 망막의
+                                            초평면 위치와 안구 성장</strong>
+                                        <span style="color: #475569; display: block; font-size: 0.95rem;">FS' (시상 초점선)이
+                                            망막 뒤쪽에 위치할 때 원시성 초점 이탈이 발생하여 안구의 후방 성장을 유도합니다.</span>
+                                    </li>
+                                    <li style="padding-left: 1rem; border-left: 3px solid #003366;">
+                                        <strong style="color: #0f172a; display: block; margin-bottom: 0.3rem;">망막 곡률반경의
+                                            변화</strong>
+                                        <span style="color: #475569; display: block; font-size: 0.95rem;">근시가 진행될수록 안구
+                                            후방이 가파워지고, FS'는 망막보다 뒤로 위치하게 됩니다.</span>
+                                    </li>
+                                    <li style="padding-left: 1rem; border-left: 3px solid #003366;">
+                                        <strong style="color: #0f172a; display: block; margin-bottom: 0.3rem;">광학적
+                                            개입</strong>
+                                        <span style="color: #475569; display: block; font-size: 0.95rem;">주변부 FS'를 망막보다
+                                            앞에 위치시켜 안구 성장 억제 신호로 작용하도록 유도합니다.</span>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- 도전과제 4: 실시간 자동굴절계 -->
-                    <div class="challenge-item reverse">
-                        <div class="challenge-text">
-                            <h3>실시간 자동굴절계</h3>
-                            <p>연속적인 실시간 굴절이상 측정을 제공하는 차세대 파면감지 기술입니다.
-                                이 시스템은 속도와 정확성이 가장 중요한 동적 조절 연구 및
-                                소아 시력 검사에 적합하게 설계되었습니다.</p>
-                            <p><strong>핵심 목표:</strong> 높은 시간 해상도를 갖춘 양안 개방형 자동굴절측정</p>
-                        </div>
-                        <div class="challenge-media">
-                            <div class="challenge-placeholder">
-                                <p>[GIF] 실시간 굴절 데모</p>
-                                <small>assets/images/challenges/auto_refractometer/</small>
+                        <!-- Project 3: Visual Cognition -->
+                        <div class="project-section" style="margin-bottom: 5rem;">
+                            <h3 style="font-size: 1.8rem; color: #0f172a; margin-bottom: 0.5rem; word-break: keep-all;">
+                                통합 바이오메트릭스 기반 질환 예측 알고리즘</h3>
+                            <p class="subtitle"
+                                style="font-size: 1.2rem; color: #64748b; margin-bottom: 2rem; word-break: keep-all;">
+                                47개 바이오마커 기반의 신경·대사·심리 상태 동시 평가</p>
+
+                            <div class="project-body">
+                                <!-- Stats Grid -->
+                                <div
+                                    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; margin-bottom: 2rem; background: #f1f5f9; padding: 1.5rem; border-radius: 8px; text-align: center;">
+                                    <div>
+                                        <span
+                                            style="display: block; font-size: 1.5rem; font-weight: 700; color: #003366;">47</span>
+                                        <span style="font-size: 0.85rem; color: #64748b; font-weight: 600;">바이오마커</span>
+                                    </div>
+                                    <div>
+                                        <span
+                                            style="display: block; font-size: 1.5rem; font-weight: 700; color: #003366;">4</span>
+                                        <span style="font-size: 0.85rem; color: #64748b; font-weight: 600;">질환군</span>
+                                    </div>
+                                    <div>
+                                        <span
+                                            style="display: block; font-size: 1.5rem; font-weight: 700; color: #003366;">90%+</span>
+                                        <span style="font-size: 0.85rem; color: #64748b; font-weight: 600;">정확도</span>
+                                    </div>
+                                    <div>
+                                        <span
+                                            style="display: block; font-size: 1.5rem; font-weight: 700; color: #003366;">3분</span>
+                                        <span style="font-size: 0.85rem; color: #64748b; font-weight: 600;">검사 시간</span>
+                                    </div>
+                                </div>
+
+                                <h4 style="font-size: 1rem; font-weight: 700; color: #334155; margin-bottom: 0.5rem;">연구
+                                    목표</h4>
+                                <p
+                                    style="margin-bottom: 1.5rem; line-height: 1.7; color: #334155; word-break: keep-all;">
+                                    자율신경계 기능, 망막 대비감도(CSF), 인지·심리 상태를 반영하는 동공 반응 지표와 대비감도를 결합해,
+                                    당뇨망막병증·녹내장·경도인지장애(MCI)·심리 성향까지 포괄하는 단일 스크리닝 알고리즘을 개발하는 것입니다.</p>
+
+                                <h4 style="font-size: 1rem; font-weight: 700; color: #334155; margin-bottom: 0.5rem;">예측
+                                    정확도 (AUC)</h4>
+                                <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; margin-bottom: 2rem;">
+                                    <span
+                                        style="padding: 0.5rem 1rem; background: #fff; border: 1px solid #cbd5e1; border-radius: 20px; font-size: 0.9rem; color: #475569;">당뇨망막병증:
+                                        <strong>0.92</strong></span>
+                                    <span
+                                        style="padding: 0.5rem 1rem; background: #fff; border: 1px solid #cbd5e1; border-radius: 20px; font-size: 0.9rem; color: #475569;">녹내장:
+                                        <strong>0.88</strong></span>
+                                    <span
+                                        style="padding: 0.5rem 1rem; background: #fff; border: 1px solid #cbd5e1; border-radius: 20px; font-size: 0.9rem; color: #475569;">경도인지장애:
+                                        <strong>0.90</strong></span>
+                                </div>
                             </div>
                         </div>
+
                     </div>
 
-                    <!-- 도전과제 5: 비침습적 질환 예측 -->
-                    <div class="challenge-item">
-                        <div class="challenge-text">
-                            <h3>비침습적 전신 질환<br>예측 알고리즘</h3>
-                            <p>안구 바이오마커와 전신 건강 문제를 연관시키는 AI 기반 플랫폼입니다.
-                                망막과 전안부의 미세혈관 변화를 분석하여 당뇨병, 고혈압,
-                                심혈관 질환의 위험을 비침습적으로 예측합니다.</p>
-                            <p><strong>핵심 목표:</strong> 표준 안구 영상을 활용한 다중모드 위험 평가</p>
-                        </div>
-                        <div class="challenge-media">
-                            <div class="challenge-placeholder">
-                                <p>[Image] AI 위험 예측 스코어카드</p>
-                                <small>assets/images/challenges/disorder_prediction/</small>
-                            </div>
+                    <!-- AI 질환 진단 섹션 -->
+                    <div style="margin-top: 4rem;">
+                        <h3
+                            style="font-size: 1.8rem; color: #003366; margin-bottom: 2rem; padding-bottom: 0.5rem; border-bottom: 2px solid #003366;">
+                            AI 질환 예측</h3>
+                        <p style="color: #64748b; margin-bottom: 2rem;">AI 시각 지능을 활용한 8단계 안구 질환 위험도 분석 시스템</p>
+                        <div id="diagnostics-container">
+                            <div class="loading">데이터를 불러오는 중...</div>
                         </div>
                     </div>
                 </div>
-
-                <!-- AI 질환 진단 섹션 -->
-                <div style="margin-top: 4rem;">
-                    <h3
-                        style="font-size: 1.8rem; color: #003366; margin-bottom: 2rem; padding-bottom: 0.5rem; border-bottom: 2px solid #003366;">
-                        AI 질환 예측</h3>
-                    <p style="color: #64748b; margin-bottom: 2rem;">AI 시각 지능을 활용한 8단계 안구 질환 위험도 분석 시스템</p>
-                    <div id="diagnostics-container">
-                        <div class="loading">데이터를 불러오는 중...</div>
-                    </div>
-                </div>
-            </div>
         </section>
     </main>
 
