Add Gabor patch SVG icon to Research Overview pages

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -58,11 +58,7 @@
         <section class="section" style="padding: 4rem 5%;">
             <div class="container">
 
-                <!-- Hero Section -->
-                <header class="challenge-hero">
-                    <h2>도전과제</h2>
-                    <p>차세대 시각 진단 및 재활을 위한 혁신적 솔루션을 개척합니다.</p>
-                </header>
+                <!-- Hero Section Removed -->
 
                 <!-- Lead Introduction -->
                 <div class="challenge-list">
@@ -81,6 +77,20 @@
                         <div class="challenge-visual-container">
                             <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: #0f172a; word-break: keep-all;">좌우
                                 시각경로의 모션 대비감도</h3>
+
+                            <p
+                                style="font-size: 0.95rem; color: #475569; margin-bottom: 2rem; line-height: 1.6; word-break: keep-all;">
+                                대비감도(Contrast Sensitivity)는 물체와 배경을 구별하는 시각 시스템의 능력을 측정하며, 이는 일반적인 시력(Acuity)을 넘어선 기능적
+                                시각의 핵심 지표입니다.
+                                우리는 가우시안 포락선으로 변조된 정현파 격자인 <strong>가보자극(Gabor patch)</strong>
+                                <img src="../../assets/images/gabor_patch.svg"
+                                    style="width: 40px; height: 40px; vertical-align: middle; margin: 0 4px; border-radius: 50%; box-shadow: 0 2px 5px rgba(0,0,0,0.1);"
+                                    alt="가보 자극">
+                                을 사용하여 시각계의 공간적 및 시간적
+                                합산(Spatial and Temporal Summation) 기전을 정밀하게 탐구합니다.
+                                자극의 크기와 지속 시간을 조절함으로써 시각 뉴런의 수용장 특성을 매핑하고, 특정 신경 채널의 결함을 분리해낼 수 있습니다.
+                            </p>
+
                             <div class="challenge-visual-grid">
                                 <figure>
                                     <img src="../../assets/images/contrast_sensitivity_plot.png" alt="대비감도 그래프">
@@ -95,6 +105,14 @@
                                         인구 집단 분석 (Population Analytics)</figcaption>
                                 </figure>
                             </div>
+
+                            <p
+                                style="font-size: 0.95rem; color: #475569; margin-top: 2rem; line-height: 1.6; word-break: keep-all;">
+                                <strong style="color: #0f172a;">연구 결과의 의미 (Key Findings):</strong> 민감도 역치 분석 결과는 연령 그룹별로
+                                뚜렷한 기능적 기준선을 보여주며, 박스플롯(Boxplot)은 고령층에서 유의미한 분산(Variance)이
+                                나타남을 시사합니다.
+                                이러한 데이터는 구조적 손상이 가시화되기 전, 초기 단계의 미세한 신경 퇴화를 감지하기 위한 정량적 표준을 수립하는 데 기여합니다.
+                            </p>
                         </div>
                     </div>
 
