--- a/research/overview.html
+++ b/research/overview.html
@@ -60,11 +60,7 @@
         <section class="section" style="padding: 4rem 5%;">
             <div class="container">
 
-                <!-- Hero Section -->
-                <header class="challenge-hero">
-                    <h2>Research Challenges</h2>
-                    <p>Pioneering solutions for next-generation vision diagnostics and rehabilitation.</p>
-                </header>
+                <!-- Hero Section Removed -->
 
                 <!-- Lead Introduction -->
                 <div class="challenge-list">
@@ -85,6 +81,20 @@
                         <div class="challenge-visual-container">
                             <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: #0f172a;">Motion Contrast
                                 Sensitivity</h3>
+
+                            <p style="font-size: 0.95rem; color: #475569; margin-bottom: 2rem; line-height: 1.6;">
+                                Contrast sensitivity measures the visual system's ability to distinguish objects from
+                                their background, a critical indicator of functional vision beyond standard acuity.
+                                We utilize <strong>Gabor patches</strong>
+                                <img src="../assets/images/gabor_patch.svg"
+                                    style="width: 40px; height: 40px; vertical-align: middle; margin: 0 4px; border-radius: 50%; box-shadow: 0 2px 5px rgba(0,0,0,0.1);"
+                                    alt="Gabor Patch">
+                                —sinusoidal gratings modulated by a Gaussian
+                                envelope—to precisely probe spatial and temporal summation mechanisms.
+                                By varying the size and duration of these stimuli, we can map the receptive field
+                                properties of visual neurons and isolate deficits in specific neural channels.
+                            </p>
+
                             <div class="challenge-visual-grid">
                                 <figure>
                                     <img src="../assets/images/contrast_sensitivity_plot.png"
@@ -101,6 +111,15 @@
                                         Population Analytics</figcaption>
                                 </figure>
                             </div>
+
+                            <p style="font-size: 0.95rem; color: #475569; margin-top: 2rem; line-height: 1.6;">
+                                <strong style="color: #0f172a;">Key Findings:</strong> The sensitivity threshold
+                                analysis reveals distinct functional baselines across age
+                                groups, with the boxplot demonstrating significant variance in the older
+                                demographic.
+                                This data establishes a quantitative standard for detecting subtle neural
+                                degradation before structural damage becomes visible.
+                            </p>
                         </div>
                     </div>
 
