도전과제 페이지: 가보 패치 GIF 추가 및 레이아웃 개선
- 가보 패치를 문장에서 제거하고 이미지 위에 별도 배치
- 1-30 cpd 공간주파수 변화 가보 패치 GIF 생성 스크립트 추가
- 한국어/영어 페이지 모두 업데이트
- GIF 생성 가이드 문서 추가

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -82,14 +82,21 @@
                                 style="font-size: 0.95rem; color: #475569; margin-bottom: 2rem; line-height: 1.6; word-break: keep-all;">
                                 대비감도(Contrast Sensitivity)는 물체와 배경을 구별하는 시각 시스템의 능력을 측정하며, 이는 일반적인 시력(Acuity)을 넘어선 기능적
                                 시각의 핵심 지표입니다.
-                                우리는 가우시안 포락선으로 변조된 정현파 격자인 <strong>가보자극(Gabor patch)</strong>
-                                <img src="../../assets/images/gabor_patch.svg"
-                                    style="width: 40px; height: 40px; vertical-align: middle; margin: 0 4px; border-radius: 50%; box-shadow: 0 2px 5px rgba(0,0,0,0.1);"
-                                    alt="가보 자극">
-                                을 사용하여 시각계의 공간적 및 시간적
+                                우리는 가우시안 포락선으로 변조된 정현파 격자인 <strong>가보자극(Gabor patch)</strong>을 사용하여 시각계의 공간적 및 시간적
                                 합산(Spatial and Temporal Summation) 기전을 정밀하게 탐구합니다.
                                 자극의 크기와 지속 시간을 조절함으로써 시각 뉴런의 수용장 특성을 매핑하고, 특정 신경 채널의 결함을 분리해낼 수 있습니다.
                             </p>
+
+                            <!-- 가보 패치 GIF - 공간주파수 변화 시각화 -->
+                            <div style="margin-bottom: 2rem; text-align: center;">
+                                <img src="../../assets/images/gabor_spatial_frequency.gif" 
+                                     alt="가보 패치 공간주파수 변화 (1-30 cpd)" 
+                                     style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                                     loading="lazy">
+                                <p style="margin-top: 0.5rem; font-size: 0.85rem; color: #64748b; font-style: italic;">
+                                    저역대 공간주파수 변화: 1 cpd부터 30 cpd까지의 가보 패치
+                                </p>
+                            </div>
 
                             <div class="challenge-visual-grid">
                                 <figure>
