--- a/research/overview.html
+++ b/research/overview.html
@@ -85,15 +85,22 @@
                             <p style="font-size: 0.95rem; color: #475569; margin-bottom: 2rem; line-height: 1.6;">
                                 Contrast sensitivity measures the visual system's ability to distinguish objects from
                                 their background, a critical indicator of functional vision beyond standard acuity.
-                                We utilize <strong>Gabor patches</strong>
-                                <img src="../assets/images/gabor_patch.svg"
-                                    style="width: 40px; height: 40px; vertical-align: middle; margin: 0 4px; border-radius: 50%; box-shadow: 0 2px 5px rgba(0,0,0,0.1);"
-                                    alt="Gabor Patch">
-                                —sinusoidal gratings modulated by a Gaussian
+                                We utilize <strong>Gabor patches</strong>—sinusoidal gratings modulated by a Gaussian
                                 envelope—to precisely probe spatial and temporal summation mechanisms.
                                 By varying the size and duration of these stimuli, we can map the receptive field
                                 properties of visual neurons and isolate deficits in specific neural channels.
                             </p>
+
+                            <!-- Gabor Patch GIF - Spatial Frequency Visualization -->
+                            <div style="margin-bottom: 2rem; text-align: center;">
+                                <img src="../assets/images/gabor_spatial_frequency.gif" 
+                                     alt="Gabor Patch Spatial Frequency Variation (1-30 cpd)" 
+                                     style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                                     loading="lazy">
+                                <p style="margin-top: 0.5rem; font-size: 0.85rem; color: #64748b; font-style: italic;">
+                                    Low Spatial Frequency Variation: Gabor patches from 1 cpd to 30 cpd
+                                </p>
+                            </div>
 
                             <div class="challenge-visual-grid">
                                 <figure>
