가보패치 GIF 개선: 크기 축소/구경 고정/텍스트 위치 변경
- 사각틀(가보패치) 200px로 축소(기존 대비 50%)
- 가우시안 포락선(sigma) 고정으로 주파수별 구경 감소 제거
- 텍스트를 사각틀 밖(아래)으로 이동, '*' 제거
- ko/en 도전과제 페이지 캡션 제거 및 표시 크기 조정

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -91,11 +91,8 @@
                             <div style="margin-bottom: 2rem; text-align: center;">
                                 <img src="../../assets/images/gabor_spatial_frequency.gif" 
                                      alt="가보 패치 공간주파수 변화 (1-30 cpd)" 
-                                     style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                                     style="width: 50%; max-width: 260px; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
                                      loading="lazy">
-                                <p style="margin-top: 0.5rem; font-size: 0.85rem; color: #64748b; font-style: italic;">
-                                    저역대 공간주파수 변화: 1 cpd부터 30 cpd까지의 가보 패치
-                                </p>
                             </div>
 
                             <div class="challenge-visual-grid">
