--- a/research/overview.html
+++ b/research/overview.html
@@ -95,11 +95,8 @@
                             <div style="margin-bottom: 2rem; text-align: center;">
                                 <img src="../assets/images/gabor_spatial_frequency.gif" 
                                      alt="Gabor Patch Spatial Frequency Variation (1-30 cpd)" 
-                                     style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                                     style="width: 50%; max-width: 260px; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
                                      loading="lazy">
-                                <p style="margin-top: 0.5rem; font-size: 0.85rem; color: #64748b; font-style: italic;">
-                                    Low Spatial Frequency Variation: Gabor patches from 1 cpd to 30 cpd
-                                </p>
                             </div>
 
                             <div class="challenge-visual-grid">
