가보패치 시각화 개선: 원형 구경 확대/텍스트 스타일 통일/시간주파수 GIF 추가
- 가보패치 원형 구경을 사각틀 내 최대 크기로(원형 마스크+부드러운 가장자리)
- GIF 하단 라벨을 figcaption 스타일(색 #94a3b8, 0.9rem 수준)로 통일
- 시간주파수 1-30Hz GIF(temporal_frequency.gif) 추가
- 도전과제 페이지에 공간/시간 주파수 GIF를 좌/우 동일 크기로 배치(ko/en)

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -87,12 +87,20 @@
                                 자극의 크기와 지속 시간을 조절함으로써 시각 뉴런의 수용장 특성을 매핑하고, 특정 신경 채널의 결함을 분리해낼 수 있습니다.
                             </p>
 
-                            <!-- 가보 패치 GIF - 공간주파수 변화 시각화 -->
-                            <div style="margin-bottom: 2rem; text-align: center;">
-                                <img src="../../assets/images/gabor_spatial_frequency.gif" 
-                                     alt="가보 패치 공간주파수 변화 (1-30 cpd)" 
-                                     style="width: 50%; max-width: 260px; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
-                                     loading="lazy">
+                            <!-- 공간/시간 주파수 GIF (좌/우 동일 크기 박스) -->
+                            <div style="margin-bottom: 2rem; display: flex; gap: 1.25rem; justify-content: center; flex-wrap: wrap;">
+                                <div style="flex: 0 1 260px; text-align: center;">
+                                    <img src="../../assets/images/gabor_spatial_frequency.gif"
+                                         alt="가보 패치 공간주파수 변화 (1-30 cpd)"
+                                         style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                                         loading="lazy">
+                                </div>
+                                <div style="flex: 0 1 260px; text-align: center;">
+                                    <img src="../../assets/images/temporal_frequency.gif"
+                                         alt="가보 패치 시간주파수 변화 (1-30 Hz)"
+                                         style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                                         loading="lazy">
+                                </div>
                             </div>
 
                             <div class="challenge-visual-grid">
