--- a/research/overview.html
+++ b/research/overview.html
@@ -91,12 +91,20 @@
                                 properties of visual neurons and isolate deficits in specific neural channels.
                             </p>
 
-                            <!-- Gabor Patch GIF - Spatial Frequency Visualization -->
-                            <div style="margin-bottom: 2rem; text-align: center;">
-                                <img src="../assets/images/gabor_spatial_frequency.gif" 
-                                     alt="Gabor Patch Spatial Frequency Variation (1-30 cpd)" 
-                                     style="width: 50%; max-width: 260px; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
-                                     loading="lazy">
+                            <!-- Spatial/Temporal frequency GIFs (same-size left/right boxes) -->
+                            <div style="margin-bottom: 2rem; display: flex; gap: 1.25rem; justify-content: center; flex-wrap: wrap;">
+                                <div style="flex: 0 1 260px; text-align: center;">
+                                    <img src="../assets/images/gabor_spatial_frequency.gif"
+                                         alt="Gabor Patch Spatial Frequency Variation (1-30 cpd)"
+                                         style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                                         loading="lazy">
+                                </div>
+                                <div style="flex: 0 1 260px; text-align: center;">
+                                    <img src="../assets/images/temporal_frequency.gif"
+                                         alt="Gabor Patch Temporal Frequency Variation (1-30 Hz)"
+                                         style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                                         loading="lazy">
+                                </div>
                             </div>
 
                             <div class="challenge-visual-grid">
